--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,3 +49,13 @@ jobs:
 
       - name: Run PHPStan
         run: vendor/bin/phpstan analyse
+      - name: Deploy using ssh
+        uses: appleboy/ssh-action@v1.1.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          # password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            cd ${{ secrets.APP_PATH }}
+            ./build.sh
