--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Run migrations
         run: php artisan migrate --seed --env=testing --force
 
-      - name: Run PHPStan
-        run: vendor/bin/phpstan analyse
+      # - name: Run PHPStan
+      #   run: vendor/bin/phpstan analyse
 
       # - name: Deploy using ssh
       #   uses: appleboy/ssh-action@v1.1.0
